# WalkOnSpheres

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mytypes.h  window.cpp  window.h  wos.cpp  wos.h  wosinfo.h
src/boundary/: boxboundary.h
src/core/: boundary.h  pde.h
src/pde/: pdes.cpp  pdes.h
